--- a/advanced/index.html
+++ b/advanced/index.html
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
 
-    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-    <script type="text/javascript" src="application.js"></script>
-    <script type="text/javascript" src="ads.js"></script>
-    <script type="text/javascript" src="video_player.js"></script>
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <!-- GPT Companion Code -->
-    <!-- Initialize the tagging library -->
-     <script type='text/javascript'>
-       var googletag = googletag || {};
-       googletag.cmd = googletag.cmd || [];
-       (function() {
-         var gads = document.createElement('script');
-         gads.async = true;
-         gads.type = 'text/javascript';
-         gads.src = '//www.googletagservices.com/tag/js/gpt.js';
-         var node = document.getElementsByTagName('script')[0];
-         node.parentNode.insertBefore(gads, node);
-       })();
-     </script>
+  <script type="text/javascript" src="https://imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+  <script type="text/javascript" src="application.js"></script>
+  <script type="text/javascript" src="ads.js"></script>
+  <script type="text/javascript" src="video_player.js"></script>
 
-     <!-- Register your companion slots -->
-     <script type='text/javascript'>
-       googletag.cmd.push(function() {
-         // Supply YOUR_NETWORK/YOUR_UNIT_PATH in place of 6062/iab_vast_samples.
-         googletag.defineSlot('/6062/iab_vast_samples', [728, 90], 'companionDiv')
-             .addService(googletag.companionAds())
-             .addService(googletag.pubads());
-         googletag.companionAds().setRefreshUnfilledSlots(true);
-         googletag.pubads().enableVideoAds();
-         googletag.enableServices();
-       });
-     </script>
 
-    <title>IMA HTML5 SDK Advanced Demo</title>
-  </head>
-  <body>
+
+  <!-- GPT Companion Code -->
+  <!-- Initialize the tagging library -->
+  <script type='text/javascript'>
+    var googletag = googletag || {};
+    googletag.cmd = googletag.cmd || [];
+    (function () {
+      var gads = document.createElement('script');
+      gads.async = true;
+      gads.type = 'text/javascript';
+      gads.src = '//www.googletagservices.com/tag/js/gpt.js';
+      var node = document.getElementsByTagName('script')[0];
+      node.parentNode.insertBefore(gads, node);
+    })();
+  </script>
+
+  <!-- Register your companion slots -->
+  <script type='text/javascript'>
+    googletag.cmd.push(function () {
+      // Supply YOUR_NETWORK/YOUR_UNIT_PATH in place of 6062/iab_vast_samples.
+      googletag.defineSlot('/6062/iab_vast_samples', [728, 90], 'companionDiv')
+        .addService(googletag.companionAds())
+        .addService(googletag.pubads());
+      googletag.companionAds().setRefreshUnfilledSlots(true);
+      googletag.pubads().enableVideoAds();
+      googletag.enableServices();
+    });
+  </script>
+
+  <title>IMA HTML5 SDK Advanced Demo</title>
+</head>
+
+<body>
   <div id="container">
     <header>IMA HTML5 SDK Advanced Demo</header>
+
 
     <center>
       <label for="tag">Tag (<span id="sampleAdTag" class="urlLink">sample</span>):&nbsp;</label>
       <input type="text" size="75" id="tagText" />
     </center>
-
-    <div id="videoplayer">
-      <video id="content">
-        <source src="https://storage.googleapis.com/gvabox/media/samples/stock.mp4"></source>
-      </video>
-      <div id="adcontainer">
+    <div id="videoContainer">
+      <button id="pip" title="Picture-in-Picture" onclick="PipButton()">Request Picture in Picture Window </button>
+      <div id="videoplayer">
+        <video id="content">
+          <source src="https://storage.googleapis.com/gvabox/media/samples/stock.mp4">
+          </source>
+        </video>
+        <div id="adcontainer">
+        </div>
+        <button id="playpause" title="Play/Pause">&#9654;</button>
+        <button id="fullscreen" title="Full screen">[&nbsp;&nbsp;&nbsp;]</button>
       </div>
-      <button id="playpause" title="Play/Pause">&#9654;</button>
-      <button id="fullscreen" title="Full screen">[&nbsp;&nbsp;&nbsp;]</button>
     </div>
+
 
     <div id="customClick">
       <div id="customClickTextWrapper">Click here for more info on your ad.</div>
@@ -68,22 +77,65 @@
         // Using the command queue to enable asynchronous loading.
         // The unit will not actually display now - it will display when
         // the video player is displaying the ads.
-        googletag.cmd.push(function() { googletag.display('companionDiv'); });
+        googletag.cmd.push(function () { googletag.display('companionDiv'); });
       </script>
     </div>
 
     <div id="console">
-    Welcome to IMA HTML5 SDK Demo!
+      Welcome to IMA HTML5 SDK Demo!
     </div>
 
     <footer>Copyright (C) 2013 Google Inc.</footer>
   </div>
   <script type="text/javascript">
-  var application = null;
+    var application = null;
 
-  window.onload = function() {
-    application = new Application();
-  };
+    window.onload = function () {
+      application = new Application();
+    };
   </script>
-  </body>
+  <script>
+    var isPIPActive = false;
+    async function PipButton() {
+      if (isPIPActive) return
+      const playerWrapper = document.querySelector("#videoplayer");
+      const pipWindow = await documentPictureInPicture.requestWindow({
+        height: 360,
+        width: 640,
+      });
+      isPIPActive = true;
+
+      // Copy style sheets over from the initial document
+      // so that the player looks the same.
+      [...document.styleSheets].forEach((styleSheet) => {
+        try {
+          const cssRules = [...styleSheet.cssRules].map((rule) => rule.cssText).join('');
+          const style = document.createElement('style');
+
+          style.textContent = cssRules;
+          pipWindow.document.head.appendChild(style);
+        } catch (e) {
+          const link = document.createElement('link');
+
+          link.rel = 'stylesheet';
+          link.type = styleSheet.type;
+          link.media = styleSheet.media;
+          link.href = styleSheet.href;
+          pipWindow.document.head.appendChild(link);
+        }
+      });
+
+      pipWindow.document.body.append(playerWrapper)
+
+      pipWindow.addEventListener("pagehide", (event) => {
+        const playerWrapper = document.querySelector("#videoContainer");
+        const pipPlayer = event.target.querySelector("#videoplayer");
+        playerWrapper.append(pipPlayer);
+        isPIPActive = false;
+      });
+    }
+
+  </script>
+</body>
+
 </html>
